--- a/index.html
+++ b/index.html
@@ -168,6 +168,38 @@ h2 {
   font-style: italic;
 }
 
+.projects {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            width: 80%;
+            max-width: 1200px;
+            margin-top: 20px;
+        }
+        .card {
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            text-align: center;
+        }
+        .card h3 {
+            margin: 0;
+            margin-bottom: 10px;
+        }
+        .card p {
+            color: #b11b1b;
+            margin-bottom: 20px;
+        }
+        .card a {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: bold;
+        }
+        .card a:hover {
+            text-decoration: underline;
+        }
+
 .profile {
             text-align: center;
         }
@@ -261,7 +293,7 @@ textarea {
         <li><a class="nav-link scrollto" href="#education">Education</a></li>
         <li><a class="nav-link scrollto" href="#skills">Skills</a></li>
         <li><a class="nav-link scrollto" href="#experience">Experience</a></li>
-        <!-- <li><a class="nav-link scrollto " href="#work">Work</a></li> -->
+        <li><a class="nav-link scrollto " href="#project">Project</a></li>
         <!-- <li><a class="nav-link scrollto " href="#certification">Certification</a></li> -->
         <li><a class="nav-link scrollto " href="#profile">Profile</a></li>
         <li><a class="nav-link scrollto " href="#contact">Contact</a></li> 
@@ -425,6 +457,35 @@ textarea {
    </section>
 
     <!--certification-->
+
+    <!--Project-->
+    <section id="project">
+      <div class="container">
+        <h1>My Projects</h1>
+        <div class="projects">
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Title : Implementation of Embedded Web Server Using TCP IP
+                  ● Platform : Embedded System
+                  </p>
+                <a href="https://github.com/your-username/project1" target="_blank">View Project</a>
+            </div>
+            <div class="card">
+                <h3>Project 2</h3>
+                <p>Title : Online Electronics Shopping
+                  ● Platform : Android, Node js, React,MySql
+                    Project is based on Embedded Web Server.
+                 </p>
+                <a href="https://github.com/PG-DMC-PROJECT-ESHOPPY/online-electronic-shopping.git" target="_blank">View Project</a>
+            </div>
+            <div class="card">
+                <h3>Project 3</h3>
+                <p>My portfolio is contains a skills, qualifications, education, training, and experiences.</p>
+                <a href="https://github.com/bhagyashree-garakate/myPortfolio "target="_blank">View Project</a>
+            </div>
+        </div>
+      </div>
+    </section>
     <!--Profile-->
     <section id="profile">
       <div class="container">
@@ -483,30 +544,7 @@ textarea {
 
    
 
-  <!-- ======= Footer ======= -->
-  <!-- <footer id="footer">
-    <div class="container">
-      <h3>Laura Thomson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Laura</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/ -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer>End Footer --> 
+ 
 
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
