--- a/index.html
+++ b/index.html
@@ -170,11 +170,8 @@ h2 {
 
 .projects {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
-            width: 80%;
-            max-width: 1200px;
-            margin-top: 20px;
         }
         .card {
             background: white;
@@ -188,8 +185,9 @@ h2 {
             margin-bottom: 10px;
         }
         .card p {
-            color: #b11b1b;
+            color: #666;
             margin-bottom: 20px;
+            white-space: pre-wrap; /* Preserve whitespace */
         }
         .card a {
             text-decoration: none;
@@ -199,6 +197,40 @@ h2 {
         .card a:hover {
             text-decoration: underline;
         }
+        .profile-section {
+            text-align: center;
+            margin-top: 40px;
+        }
+        .icons {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .icons a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-decoration: none;
+            color: #333;
+        }
+        .icons img {
+            width: 40px;
+            height: 40px;
+        }
+        .icons p {
+            margin: 10px 0 0 0;
+        }
+
+        @media (max-width: 768px) {
+            .projects {
+                grid-template-columns: 1fr;
+            }
+          }
+            .icons {
+                flex-direction: column;
+                align-items: center;
+            }
 
 .profile {
             text-align: center;
@@ -461,56 +493,53 @@ textarea {
     <!--Project-->
     <section id="project">
       <div class="container">
-        <h1>My Projects</h1>
-        <div class="projects">
-            <div class="card">
-                <h3>Project 1</h3>
-                <p>Title : Implementation of Embedded Web Server Using TCP IP
-                  ● Platform : Embedded System
+          <h1>My Projects</h1>
+          <div class="projects">
+              <div class="card">
+                  <h3>Embedded Web Server</h3>
+                  <p>
+                      ● Platform: Embedded System using TCP IP
                   </p>
-                <a href="https://github.com/your-username/project1" target="_blank">View Project</a>
-            </div>
-            <div class="card">
-                <h3>Project 2</h3>
-                <p>Title : Online Electronics Shopping
-                  ● Platform : Android, Node js, React,MySql
-                    Project is based on Embedded Web Server.
-                 </p>
-                <a href="https://github.com/PG-DMC-PROJECT-ESHOPPY/online-electronic-shopping.git" target="_blank">View Project</a>
-            </div>
-            <div class="card">
-                <h3>Project 3</h3>
-                <p>My portfolio is contains a skills, qualifications, education, training, and experiences.</p>
-                <a href="https://github.com/bhagyashree-garakate/myPortfolio "target="_blank">View Project</a>
-            </div>
-        </div>
-      </div>
-    </section>
-    <!--Profile-->
-    <section id="profile">
-      <div class="container">
-        <div class="profile-section">
-          <h2>PROFILE</h2>
-          <!-- <div class="profile"> -->
-            <div class="icons">
-                <a href="https://www.linkedin.com" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="LinkedIn">
-                    <p>LinkedIn</p>
-                </a>
-                <a href="https://www.github.com" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
-                    <p>GitHub</p>
-                </a>
-                <a href="https://www.instagram.com" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
-                    <p>Instagram</p>
-                </a>
-            </div>
-        </div>
+                  <a href="https://github.com/your-username/project1" target="_blank">View Project</a>
+              </div>
+              <div class="card">
+                  <h3>Online Electronics Shopping</h3>
+                  <p>
+                      ● Platform: Android, Node js, React, MySql
+                      Project is based on Embedded Web Server.
+                  </p>
+                  <a href="https://github.com/PG-DMC-PROJECT-ESHOPPY/online-electronic-shopping.git" target="_blank">View Project</a>
+              </div>
+              <div class="card">
+                  <h3>My Portfolio</h3>
+                  <p>My portfolio contains skills, qualifications, education, training, and experiences.</p>
+                  <a href="https://github.com/bhagyashree-garakate/myPortfolio" target="_blank">View Project</a>
+              </div>
           </div>
-        </div>
-    </div>
-    </section>
+      </div>
+  </section>
+
+  <section id="profile">
+      <div class="container">
+          <div class="profile-section">
+              <h2>PROFILE</h2>
+              <div class="icons">
+                  <a href="https://www.linkedin.com" target="_blank">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="LinkedIn">
+                      <p>LinkedIn</p>
+                  </a>
+                  <a href="https://www.github.com" target="_blank">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
+                      <p>GitHub</p>
+                  </a>
+                  <a href="https://www.instagram.com" target="_blank">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+                      <p>Instagram</p>
+                  </a>
+              </div>
+          </div>
+      </div>
+  </section>
 
     <!--Contact-->
     <section id="contact">
